# sql-injection-detection

./: .gitignore  pyproject.toml
src/: app.py
src/api/: app.py
src/api/exceptions/: custom_exception.py
src/api/sql_detector/: __init__.py  main.py  mapping.py
src/notebook/: model.ipynb  model__random_forest.joblib  model__xgboost.joblib  selection_RFE.array
src/notebook/.ipynb_checkpoints/: model-checkpoint.ipynb  vector_allocation3 with PCA-checkpoint.ipynb  vector_allocation3 without PCA-checkpoint.ipynb
src/sql_detector/: __init__.py  dataclass.py  exceptions.py  main.py  mapping.py
src/sql_injection_detection/: main.py
