[tool.poetry]
name = "sql injection detection"
version = "0.1.0"
description = "Implementation of an ML model that can successfully detect malicious SQL injection commands"
authors = ["Dakoh Wisdom <wiizzydreadmill@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
xgboost = "^2.0.1"
matplotlib = "^3.8.1"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
